# demo-app

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  medium.md  pyproject.toml  run.sh
agents/: orchestrator.md
agents/stage/: architecture.md  design.md  development.md  devops.md  observability.md  problem-discovery.md  product.md  retirement.md  review.md  security.md  story-tasks.md  testing.md
agents/sub/: context-optimizer.md
agents/sub/architecture/: adr-writer.md  solution-evaluator.md  tech-stack-advisor.md
agents/sub/compliance/: compliance-validator.md
agents/sub/design/: data-model-designer.md  integration-planner.md  interface-designer.md  nfr-evaluator.md
agents/sub/development/: code-generator.md  documentation-agent.md  refactoring-agent.md  repo-analyzer.md
agents/sub/problem-discovery/: opportunity-analyzer.md  problem-statement-extractor.md  solution-space-explorer.md  user-research-synthesizer.md
agents/sub/product/: acceptance-criteria-generator.md  assumption-extractor.md  requirement-parser.md  (+1 more)
docs/: README.md  agent-graph.md  agents.md  architecture.md  cli-reference.md  getting-started.md  ide-integrations.md  jira-workflow.md  mcp-integrations.md  memory-system.md  phases.md  quality-gates.md  usage-guide.md
docs/evaluation/: benchmarks.md  cost-benefit-analysis.md  cost-optimization-guide.md  methodology.md  realistic-cost-model.md  tiered-approach.md
docs/governance/: ai-governance-overview.md  approval-workflows.md  budget-controls.md  compliance-frameworks.md  context-engineering-guide.md  risk-classification.md
docs/lifecycle/: complete-lifecycle-overview.md  phase-0-problem-discovery.md  phase-12-retirement.md
docs/migration/: v3-to-v4-migration-guide.md
examples/: sample-brief.txt  sample-jira-epic.md  sample-prd.md  sample-spec.yaml
references/: agent-types.md  core-workflow.md  memory-system.md  quality-control.md  sdlc-phases.md
skills/: 00-index.md  agent-dispatch.md  quality-gates.md  structured-prompting.md  testing.md
src/sdlc_cli/: __init__.py  approvals.py  banner.py  config.py  cost.py  custom_agents.py  dashboard.py  dashboard_html.py  explain.py  mermaid.py  models.py  phases.py  runs.py  scaffold.py  selector.py
templates/: agents-md-template.md  claude-instructions.md  copilot-instructions.md  cursor-rules.mdc  gemini-instructions.md  generic-instructions.md  handoff.template.md  opencode-instructions.md  stage-agent.template.md  subagent.template.md  windsurf-rules.md
templates/commands/: orchestrator.md
templates/governance/: adaptive-policy.yaml  budget-policy.yaml  compliance-policy.yaml  execution-policy.yaml  notification-config.yaml  risk-policy.yaml  token-policy.yaml
tests/: test_cli_smoke.py  test_phase_presets.py  test_phase_registry_consistency.py
(+34 files in other folders)
